create new product route and swagger documentation updated
